# Cpp-CUDA-Simulation

./: CMakeLists.txt
src/: main.cpp  simulation.cu
